# CrossChat

./: .gitignore  AGENT_SYSTEM.md  ARCHITECTURE.md  CHECKLIST.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  test_mcp.ps1  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: install_office_deps.py  setup_python.bat  setup_python.py
src-tauri/src/: error.rs  lib.rs  main.rs  migration.rs  python_env.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/event/: memory_bus.rs  mod.rs
src-tauri/src/adapters/model/: anthropic_client.rs  deepseek_client.rs  mod.rs  openai_client.rs
src-tauri/src/adapters/store/: mod.rs  (+1 more)
src-tauri/src/agent/: compactor.rs  mod.rs  react.rs  task_decomposer.rs  task_decomposer_tests.rs  tool_registry.rs
src-tauri/src/application/: agent_loop.rs  mod.rs
src-tauri/src/commands/: agent_cmd.rs  chat.rs  chat_cmd.rs  checkpoint_cmd.rs  file_ops.rs  keychain_cmd.rs  mcp_cmd.rs  mcp_health_cmd.rs  memory_cmd.rs  metrics_cmd.rs  mod.rs  provider_cmd.rs  python_cmd.rs  session_cmd.rs  skills_cmd.rs  stream_cmd.rs
src-tauri/src/core/: mod.rs
src-tauri/src/http_server/: mod.rs  routes.rs
src-tauri/src/mcp/: health.rs  health_tests.rs  mod.rs  server.rs  validator.rs
src-tauri/src/memory/: mod.rs  tests.rs  vector.rs
src-tauri/src/metrics/: mod.rs  tests.rs
src-tauri/src/ports/: approval_gate.rs  event_bus.rs  mod.rs  model_client.rs  thread_store.rs  tool_host.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  openai_compat.rs  types.rs
src-tauri/src/security/: sandbox.rs
src-tauri/src/skills/: dependency.rs  dependency_tests.rs  mod.rs
src-tauri/src/streaming/: mod.rs  sse_parser.rs
src-tauri/src/tools/: file_tools.rs  mod.rs  python_sandbox.rs  shell_tool.rs
(+82 files in other folders)
